[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Objects/Pickables/PickableBase.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://sfx/TemporarySound.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/shh.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="CircleShape2D" id=2]
radius = 192.065

[node name="Pickable" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PickupNoise" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="MagnetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Pickable_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="MagnetArea" to="." method="_on_MagnetArea_body_entered"]
